Nudge the comment gilded icon down 1px to avoid overflow.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6554,7 +6554,7 @@ table.diff {font-size: small;}
 .gilded-comment-icon {
     position: relative;
     display: inline-block;
-    margin: 0 0 -14px 8px;
+    margin: 0 0 -15px 8px;
     top: -8px;
     color: #99895F;
     font-size: .9em;
